--- a/templates/companies/add_location.html
+++ b/templates/companies/add_location.html
@@ -4,26 +4,25 @@
 {% block title %}{{ user.company }} Add Location{% endblock title %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Add Location to {{ user.company }}</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-body">
-                        <form method="post">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                {{ form.name }}
-                            </div>
-                            <button class="btn btn-primary btn-sm" type='submit'>Create</button>
-                        </form>
-                    </div>
+    <main class="mx-auto max-w-6xl px-4 pb-12 lg:pb-16">
+        <div class="bg-white shadow sm:rounded-lg">
+            <div class="px-4 py-5 sm:p-6">
+                <h3 class="text-lg font-medium leading-6 text-gray-900">Add location to {{ user.company }}</h3>
+                <div class="mt-2 max-w-xl text-sm text-gray-500">
+                    <p>Enter the location name.</p>
                 </div>
+                <form class="mt-3 sm:flex sm:items-center" method="post">
+                    <div class="w-full sm:max-w-xs">
+                        <label for="email" class="sr-only">Location</label>
+                        {{ form.name }}
+                    </div>
+                    {% csrf_token %}
+                    <button type="submit"
+                            class=" inline-flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+                        Submit
+                    </button>
+                </form>
             </div>
         </div>
-    </div>
+    </main>
 {% endblock content %}
