--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -4,10 +4,10 @@
 {% block title %}{{ user.company }} Settings{% endblock title %}
 
 {% block content %}
-    <main class="mx-auto max-w-6xl px-4 pt-10 pb-12 lg:pb-16">
+    <main class="mx-auto max-w-6xl px-4 pb-12 lg:pb-16">
         <div class="space-y-6">
             <div>
-                <h1 class="text-xl font-bold leading-6 text-gray-900">{{ user.company }} Settings</h1>
+                <h1 class="text-3xl font-bold leading-6 text-gray-900">{{ user.company }} Settings</h1>
             </div>
             <div class="sm:flex sm:items-center">
                 <div class="sm:flex-auto">
