Removed the .inc as we are not incorporated

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -125,7 +125,7 @@
             </a>
 
         </div>
-        <p class="mt-8 text-center text-base text-gray-400">&copy; {% now "Y" %} Team Bio, Inc. All rights reserved.</p>
+        <p class="mt-8 text-center text-base text-gray-400">&copy; {% now "Y" %} Team Bio All rights reserved.</p>
     </div>
 </footer>
 
