--- a/templates/companies/create_company.html
+++ b/templates/companies/create_company.html
@@ -4,26 +4,36 @@
 {% block title %}Create a Company{% endblock title %}
 
 {% block content %}
-    <div class="container">
-    <div class="row">
-            <div class="col-md-12">
-                <h1>Create your Company</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <form action="{% url 'create_company' %}" method="post">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        {{ form.name }}
-                    </div>
-                    <div class="form-group">
-                        {{ form.url }}
-                    </div>
-                    <button type="submit" class="btn btn-primary">Create</button>
-                </form>
-            </div>
-        </div>
-    </div>
+    <form class="space-y-8 divide-y divide-gray-200" action="{% url 'create_company' %}" method="post">
+        <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
+            <div class="space-y-6 sm:space-y-5">
+                <div>
+                    <h3 class="text-lg font-medium leading-6 text-gray-900">Create your company</h3>
+                    <p class="mt-1 max-w-3xl text-sm text-gray-500">The only information required to start is the name of your company and fully qualified domain name of your company.</p>
+                </div>
 
+                <div class="space-y-6 sm:space-y-5">
+                    <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+                        <label for="about" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Company Name</label>
+                        <div class="flex max-w-lg rounded-md shadow-sm">
+                            <input type="text" name="name" id="id_name" class="block w-full min-w-0 flex-1 rounded-none rounded-r-md rounded-l-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                        </div>
+                    </div>
+                    <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+                        <label for="about" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">URL</label>
+                        <div class="flex max-w-lg rounded-md shadow-sm">
+                            <input type="text" name="url" id="id_url" class="block w-full min-w-0 flex-1 rounded-none rounded-r-md rounded-l-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                        </div>
+                    </div>
+                </div>
+                {% csrf_token %}
+            </div>
+        </div>
+
+        <div class="pt-5">
+            <div class="flex justify-end">
+                <button type="submit" class="ml-3 inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Create</button>
+            </div>
+        </div>
+    </form>
 {% endblock content %}
